# CoinsDetection

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
src/: const.py  generate_dataset.py  test.py  train.py
src/utils/: __init__.py  annotations.py  generation.py  utils.py
