[tool.poetry]
name = "visorlabs"
version = "0.1.0"
description = ""
authors = ["nikonovone <nikonov.nikita@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
opencv-python = "^4.10.0.82"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
