[tool.poetry]
name = "visorlabs"
version = "0.1.0"
description = ""
authors = ["nikonovone <nikonov.nikita@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.14"
opencv-python = "^4.10.0.82"
pre-commit = "^3.7.1"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
fire = "^0.6.0"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
